# mkprojectdir

./: README.md  mkprojectdir.py  pyproject.toml
