[tool.poetry]
name = "mkprojectdir"
version = "0.1.0"
description = "Create standard directory structures for projects"
authors = ["Kevin Houlihan <kevin@crimsoncookie.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
mkprojectdir = "mkprojectdir:_main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
